--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.3",
+    "@ant-design/icons": "^5.0.1",
+    "@apollo/client": "^3.7.13",
+    "@types/node": "^18.16.3",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "framer-motion": "^10.12.4",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.29.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
