--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.7.13",
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "^18.16.3",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
