--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.6",
     "framer-motion": "^10.12.4",
     "graphql": "^16.6.0",
+    "nanoid": "3.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
