--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.7.13",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@react-google-maps/api": "^2.18.1",
     "@types/node": "^18.16.3",
     "antd": "^5.4.5",
@@ -21,6 +22,7 @@
     "nanoid": "3.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.10.0",
     "zustand": "^4.3.7"
   },
