--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.16.3",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "dayjs": "^1.11.7",
     "framer-motion": "^10.12.4",
     "graphql": "^16.6.0",
     "nanoid": "3.3.6",
